# comfy-catapult

./: .gitattributes  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .prettierrc  .style.yapf  Dockerfile  LICENSE.md  README.md  README.md.jinja2  README.template.md  __init__.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/: README.remotified.md  _license-header.md  dependencies.yml  license-header.md  logo.excalidraw
.github/workflows/: build-and-test.yml
comfy_catapult/: __init__.py  api_client.py  api_client_base.py  catapult.py  catapult_base.py  catapult_test.py  cli.py  comfy_config.py  comfy_schema.py  comfy_schema_test.py  comfy_utils.py  errors.py  remote_file_api_base.py  remote_file_api_comfy.py  remote_file_api_comfy_test.py  remote_file_api_generic.py  remote_file_api_local.py  url_utils.py  url_utils_test.py
comfy_catapult/_internal/: url_utils.py  utilities.py
comfy_catapult/examples/: add_a_node.py  sdxlturbo_example_catapulter.py  using_pydantic.py
comfy_catapult/examples/utilities/: sdxlturbo_parse_args.py
examples/: add_a_node.py  cli-example.sh  local-docker-example.sh  sdxlturbo_example_catapulter.py  using_pydantic.py
examples/utilities/: sdxlturbo_parse_args.py
scripts/: .deleteme.docker-run-tests.sh  act.sh  deploy-to-pypi.sh  format.sh  gen-readme.sh  generate-logo.sh  generate-readme.sh  generate.sh  pre.sh  precommit.sh  quickrun.sh  requirements-dev.txt  run-all-examples-as-modules.sh  run-all-examples-inside-repo.sh  run-all-examples-outside-repo.sh  run-all-examples.sh  run-all-tests.sh  run-comfy-for-tests.sh  run-inside-ci.sh  run-outside-ci.sh  type-check.sh
scripts/ci/docker/: Dockerfile  install-docker-prereqs-inside.sh
scripts/utilities/: .deleteme.install-run-tests.sh  changeguard.sh  common.sh  deploy-to-ghr.sh  deploy-to-pypi.sh  ensure-py-version.sh  ensure-pyenv.sh  ensure-reqs.sh  ensure-venv.sh  gen-readme.py  install-comfy-for-tests.sh  is_not_dirty.sh  load-venv.sh  mark_dirty.sh  pin-extra-reqs.py  pin-extra-reqs.sh  prettier.sh
test_data/: default_workflow.json  default_workflow_api.json  sdxlturbo_example_api.json
