[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy_catapult"
version = "2.2.0"
description = "Programmatically schedule ComfyUI workflows."
authors = [{name = "AYF", email = "realazthat@gmail.com"}]
license = {file = "LICENSE.md"}
readme = ".github/README.remotified.md"
keywords = [
  "pipeline",
  "scheduler",
  "stable-diffusion",
  "generative-ai",
  "comfyui"
]
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10"
]
dependencies = [
  "aiofiles >=23,<24",
  "aiohttp >=3,<4",
  "aioshutil >=1,<2",
  "aiosignal >=1,<2",
  "annotated-types <1",
  "anyio >=4,<5",
  "attrs >=23,<24",
  "colorama >=0.4,<1",
  "frozenlist >=1,<2",
  "idna >=3,<4",
  'importlib-metadata; python_version < "3.8"',
  "multidict >=6,<7",
  "pydantic >=2,<3",
  "pydantic_core >=2,<3",
  "pydash >=7,<8",
  "python-slugify >=8,<9",
  "PyYAML >=6,<7",
  "rich >=13,<14",
  "rich-argparse >=1,<2",
  "six >=1,<2",
  "sniffio >=1,<2",
  "text-unidecode >=1,<2",
  "toml <1",
  "types-aiofiles >=23,<24",
  "types-colorama >=0.4,<1",
  "typing_extensions >=4,<5",
  "websockets >=12,<13",
  "yarl >=1,<2"
]

[project.optional-dependencies]
# Set of dependencies that are known to work. To add a new dependency here, add
# a version range to the `projecct.dependencies` section above, and then run
# `EXTRA=prod bash scripts/utilties/pin-extra-reqs.sh`. Optionally, delete all the
# contents to repin all the dependencies (probably a good idea to do once in a
# while).
prod = [
  "aiofiles==23.2.1",
  "aiohttp==3.9.3",
  "aioshutil==1.3",
  "aiosignal==1.3.1",
  "annotated-types==0.6.0",
  "anyio==4.3.0",
  "async-timeout==4.0.3",
  "attrs==23.2.0",
  "colorama==0.4.6",
  "exceptiongroup==1.2.0",
  "frozenlist==1.4.1",
  "idna==3.6",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "multidict==6.0.5",
  "pydantic==2.6.4",
  "pydantic-core==2.16.3",
  "pydash==7.0.7",
  "pygments==2.18.0",
  "python-slugify==8.0.4",
  "pyyaml==6.0.1",
  "rich==13.7.1",
  "rich-argparse==1.4.0",
  "six==1.16.0",
  "sniffio==1.3.1",
  "text-unidecode==1.3",
  "toml==0.10.2",
  "types-aiofiles==23.2.0.20240403",
  "types-colorama==0.4.15.20240311",
  "typing-extensions==4.10.0",
  "websockets==12.0",
  "yarl==1.9.4"
]
# Set of dev dependencies, all pinned, so that they are known to work. To add a
# new dependency here, add the unpinned package name here, and then run
# `EXTRA=dev bash scripts/utilties/pin-extra-reqs.sh`.
dev = [
  "aiofiles==23.2.1",
  "aiohttp==3.9.3",
  "aioshutil==1.3",
  "aiosignal==1.3.1",
  "annotated-types==0.6.0",
  "anyio==4.3.0",
  "argcomplete==3.2.3",
  "async-timeout==4.0.3",
  "attrs==23.2.0",
  "autoflake==2.2.1",
  "backports-tarfile==1.1.1",
  "beautifulsoup4==4.12.3",
  "bs4==0.0.2",
  "build==1.0.3",
  "certifi==2024.2.2",
  "cffi==1.16.0",
  "cfgv==3.4.0",
  "changeguard==0.3.1",
  "charset-normalizer==3.3.2",
  "click==8.1.7",
  "colorama==0.4.6",
  "cryptography==42.0.7",
  "defusedxml==0.7.1",
  "distlib==0.3.8",
  "docutils==0.21.2",
  "exceptiongroup==1.2.0",
  "filelock==3.13.1",
  "frozenlist==1.4.1",
  "identify==2.5.33",
  "idna==3.6",
  "importlib-metadata==7.0.1",
  "isort==5.13.2",
  "jaraco-classes==3.4.0",
  "jaraco-context==5.3.0",
  "jaraco-functools==4.0.1",
  "jeepney==0.8.0",
  "jinja2==3.1.3",
  "keyring==25.2.1",
  "linkify-it-py==2.0.2",
  "markdown-it-py==3.0.0",
  "markupsafe==2.1.4",
  "mdit-py-plugins==0.4.0",
  "mdremotifier==0.3.2",
  "mdurl==0.1.2",
  "mistletoe==1.3.0",
  "more-itertools==10.2.0",
  "multidict==6.0.5",
  "mypy==1.8.0",
  "mypy-extensions==1.0.0",
  "nh3==0.2.17",
  "nodeenv==1.8.0",
  "packaging==23.2",
  "pathspec==0.12.1",
  "pexpect==4.9.0",
  "pip-tools==7.3.0",
  "pkginfo==1.10.0",
  "platformdirs==4.1.0",
  "pre-commit==3.6.0",
  "ptyprocess==0.7.0",
  "pycparser==2.22",
  "pydantic==2.6.4",
  "pydantic-core==2.16.3",
  "pydash==7.0.7",
  "pyflakes==3.2.0",
  "pygments==2.17.2",
  "pyproject-hooks==1.0.0",
  "pyright==1.1.352",
  "python-slugify==8.0.4",
  "pyyaml==6.0.1",
  "readme-renderer==43.0",
  "regex==2024.5.15",
  "requests==2.31.0",
  "requests-toolbelt==1.0.0",
  "rfc3986==2.0.0",
  "rich==13.7.0",
  "rich-argparse==1.4.0",
  "ruamel-yaml==0.18.5",
  "ruamel-yaml-clib==0.2.8",
  "secretstorage==3.3.3",
  "semver==3.0.2",
  "shellingham==1.5.4",
  "six==1.16.0",
  "sniffio==1.3.1",
  "snipinator==1.4.1",
  "soupsieve==2.5",
  "text-unidecode==1.3",
  "toml==0.10.2",
  "toml-cli==0.6.1",
  "toml-sort==0.23.1",
  "tomli==2.0.1",
  "tomlkit==0.12.4",
  "twine==5.1.0",
  "typer==0.12.3",
  "types-aiofiles==23.2.0.20240403",
  "types-beautifulsoup4==4.12.0.20240511",
  "types-colorama==0.4.15.20240311",
  "types-html5lib==1.1.11.20240228",
  "types-pyyaml==6.0.12.20240311",
  "typing-extensions==4.10.0",
  "uc-micro-py==1.0.2",
  "urllib3==2.2.1",
  "virtualenv==20.25.0",
  "websockets==12.0",
  "wheel==0.43.0",
  "xmltodict==0.13.0",
  "yapf==0.40.2",
  "yarl==1.9.4",
  "yq==3.2.3",
  "zipp==3.17.0"
]

[project.urls]
Homepage = "https://github.com/realazthat/comfy-catapult"
Documentation = "https://github.com/realazthat/comfy-catapult"
Repository = "https://github.com/realazthat/comfy-catapult"

[tool.comfy_catapult-project-metadata]
last_release = "2.2.0"
last_stable_release = "2.2.0"

[tool.setuptools.package-data]
comfy_catapult = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["comfy_catapult"]
exclude = []
namespaces = false
